working vote tally showing

--- a/views/admin/election-vote-tally.ejs
+++ b/views/admin/election-vote-tally.ejs
@@ -222,7 +222,7 @@
         </div>
         <hr class="title-line" />
 
-        <% include('shared-vote-tally') %>
+        <%- include('shared-vote-tally') %>
       </main>
     </div>
 
