--- a/views/homepages/rvs-votes-per-candidate.ejs
+++ b/views/homepages/rvs-votes-per-candidate.ejs
@@ -131,7 +131,12 @@
         </div>
 
         <div class="main-container">
-          <p>This page shows the official winners of the election for each position in the Supreme Student Council (SSC) and Local Student Councils (LSCs). Final vote counts per candidate are available on the "Votes per Candidate" page, ensuring transparency and accuracy in the results.</p>
+          <p>
+            This page allows you to view detailed vote counts for each candidate in your selected election. Click "View List of Voter IDs" to see the voter IDs associated with the votes recorded for each candidate. To verify that your vote has been added to a specific candidate, search for your
+            voter ID (which can be found on your voting receipt) in the list. If your voter ID appears, it confirms that your vote has been successfully recorded for that candidate. <br />
+            <br />
+            To ensure that your vote has not been recorded for a candidate you did not vote for, simply search again—your voter ID should not appear under that candidate.
+          </p>
 
           <%- include('../admin/shared-vote-tally') %>
         </div>
