--- a/views/admin/election-voter-turnout.ejs
+++ b/views/admin/election-voter-turnout.ejs
@@ -214,36 +214,8 @@
           </div>
         </div>
         <hr class="title-line" />
-        <div class="first-main">
-          <div class="main-header">
-            <select class="select">
-              <option>Main Campus</option>
-            </select>
-            <p id="text-blockchain-link">
-              <b>Blockchain Link:</b>
-              <span><a href="https://www.blockchain.com/ucsebulsu">https://www.blockchain.com/ucsebulsu</a></span>
-            </p>
-          </div>
-          <div class="main-content">
-            <div class="main-left">
-              <h1>LSC Voter Turnout</h1>
-              <div id="container-charts"></div>
-            </div>
-            <div class="main-right">
-              <h1>BulSU Total Voter Turnout</h1>
-              <div class="content-box-2">
-                <br />
-                <canvas id="chart-turnout"></canvas>
 
-                <div class="summary-text">
-                  <span></span>
-                </div>
-              </div>
-              <br />
-              <div class="content-colleges"></div>
-            </div>
-          </div>
-        </div>
+        <%- include('shared-voter-turnout') %>
       </main>
     </div>
 
@@ -264,92 +236,6 @@
         <a href="help_page">here.</a>
       </div>
     </footer>
-
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        // Get the container where liner bars will be rendered
-        const container = document.getElementById("container-charts");
-        if (!container) return;
-
-        // Retrieve the list of colleges from electionConfig
-        const colleges = <%- JSON.stringify(electionConfig.listOfElections) %>;
-        console.log("Colleges data:", colleges);
-
-        // Loop through each college
-        colleges.forEach((college) => {
-          // Create a container for the liner bar and give it a unique id
-          const div = document.createElement("div");
-          div.id = `liner-bar-college-${college.acronym}`;
-          div.classList.add("liner-bar-college"); // optional for additional styling
-          container.appendChild(div);
-
-          // Prepare the data for the liner bar:
-          // "Voted" is 0 and "Not Yet Voted" is set to the total number of voters for that college.
-          const data = {
-            title: college.name,
-            dark: false, // change to true if you want a dark theme
-            items: [
-              { name: "Voted", value: college.numberOfVoted, color: "#5fb643" },
-              { name: "Not Yet Voted", value: college.voters - college.numberOfVoted, color: "#FC440F" }
-            ]
-          };
-
-          // Instantiate the liner bar using your LinerBar class from liner-bar.js.
-          // Note: liner-bar.js exposes the constructor as LinerBar.
-          const bar = new LinerBar(`#${div.id}`, data);
-          bar.render();
-
-          // container.appendChild("<br>");
-        });
-      });
-    </script>
-
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        // Retrieve the list of colleges from electionConfig passed via EJS
-        const colleges = <%- JSON.stringify(electionConfig.listOfElections) %>;
-
-        // Sum up total registered voters and total voted across all colleges
-        let totalStudents = 0;
-        let totalRegistered = 0;
-        let totalVoted = 0;
-        colleges.forEach(college => {
-          totalStudents += college.voters;
-          totalRegistered += college.registeredVoters;
-          totalVoted += college.numberOfVoted;
-        });
-        const notVoted = totalRegistered - totalVoted;
-
-        // Setup Chart.js chart data
-        const ctx = document.getElementById('chart-turnout').getContext('2d');
-        const data = {
-          labels: ['Voted', 'Not Yet Voted'],
-          datasets: [{
-            data: [totalVoted, totalStudents - totalVoted],
-            backgroundColor: ['#5fb643', '#FC440F'],
-            borderWidth: 1,
-          }]
-        };
-
-        // Instantiate the pie chart using Chart.js
-        new Chart(ctx, {
-          type: 'pie', // Change to 'doughnut' if you prefer a donut chart
-          data: data,
-          options: {
-            responsive: true,
-            plugins: {
-              legend: {
-                position: 'bottom'
-              },
-              title: {
-                display: true,
-                text: 'BulSU Total Voter Turnout'
-              }
-            }
-          }
-        });
-      });
-    </script>
 
     <script>
       function formatDate(isoString) {
