--- a/views/admin/election-voter-turnout.ejs
+++ b/views/admin/election-voter-turnout.ejs
@@ -8,6 +8,9 @@
 
     <link rel="stylesheet" type="text/css" href="admin/css/index-admin.css" />
     <link rel="stylesheet" type="text/css" href="admin/css/sidebar.css" />
+    <link rel="stylesheet" type="text/css" href="admin/css/vote-tally.css" />
+
+    <link rel="stylesheet" type="text/css" href="admin/css/index-election.css" />
     <link rel="stylesheet" type="text/css" href="admin/css/voter-turnout.css" />
 
     <link rel="stylesheet" href="admin/dependencies/liner-bar.css" />
