--- a/views/homepages/rvs-about.ejs
+++ b/views/homepages/rvs-about.ejs
@@ -67,7 +67,7 @@
             <li><span class="light-yellow">Your Privacy is Protected:</span> Your identity stays private. No one, not even system administrators, can see who you voted for. Each vote is hashed—a process that secures your vote without revealing your identity—and cannot be traced back to you.</li>
             <br />
             <li>
-              <span class="light-yellow">Transparent and Verifiable Results:</span> You can check the total votes for each candidate and verify your vote using your unique transaction receipt. This receipt contains a summary of your vote and a transaction hash, allowing you to confirm it was
+              <span class="light-yellow">Transparent and Verifiable Results:</span> You can check the total votes for each candidate and verify your vote using your unique voting receipt. This receipt contains a summary of your vote and your voter ID, allowing you to confirm it was
               recorded correctly on the blockchain.
             </li>
           </ul>
@@ -89,11 +89,11 @@
         <p>2025 - Fourmula 1</p>
       </div>
 
-      <div class="footer-right">
+      <!-- <div class="footer-right">
         <img src="img/info.png" class="footer-img" id="info-img" />
         <p>Need help? Click&nbsp;</p>
         <a href="help_page">here.</a>
-      </div>
+      </div> -->
     </footer>
 
     <script>
