--- a/views/homepages/rvs-election-results.ejs
+++ b/views/homepages/rvs-election-results.ejs
@@ -101,12 +101,12 @@
         <img src="img/copyright.png" class="footer-img" id="copyright-img" />
         <p>2025 - Fourmula 1</p>
       </div>
-
+      <!-- 
       <div class="footer-right">
         <img src="img/info.png" class="footer-img" id="info-img" />
         <p>Need help? Click&nbsp;</p>
         <a href="help_page">here.</a>
-      </div>
+      </div> -->
     </footer>
 
     <script>
