--- a/views/homepages/rvs-voter-turnout.ejs
+++ b/views/homepages/rvs-voter-turnout.ejs
@@ -86,11 +86,11 @@
         <img src="img/copyright.png" class="footer-img" id="copyright-img" />
         <p>2025 - Fourmula 1</p>
       </div>
-      <div class="footer-right">
+      <!-- <div class="footer-right">
         <img src="img/log-in.png" class="footer-img" id="admin-img" />
         <p>Admin? Log in&nbsp;</p>
         <a href="admin_login.html"> here.</a>
-      </div>
+      </div> -->
     </footer>
 
     <script>
