--- a/views/homepages/index-results-are-out-period.ejs
+++ b/views/homepages/index-results-are-out-period.ejs
@@ -11,6 +11,10 @@
     <link rel="stylesheet" type="text/css" href="css/index_results_announcement_period.css" />
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+
+    <link rel="stylesheet" href="components/notification.css" />
   </head>
   <body>
     <header class="header">
@@ -42,8 +46,7 @@
         </div>
         <div class="main-container">
           <p class="bigger-text">
-            Thank you for your participation! The election period for the <span class="election-name">BulSU Student Government Elections S.Y. 2025-2026</span> has concluded. To view the official results, please refer to the University Commission on Student Elections (BulSU UCSE) official page:
-            <a href="https://www.facebook.com/ucsebulsu">https://www.facebook.com/ucsebulsu</a> <br />
+            Thank you for your participation! The election period for the <span class="election-name">BulSU Student Government Elections S.Y. 2025-2026</span> has concluded. To view the official results, please refer to the University Commission on Student Elections (BulSU UCSE) official page: <a href="https://www.facebook.com/ucsebulsu">https://www.facebook.com/ucsebulsu</a> <br />
             <br />
             Alternatively, you can view and verify the results directly by clicking <a href="/rvs-about">here.</a>
           </p>
@@ -79,6 +82,7 @@
       </div>
     </footer>
     <script src="js/index.js"></script>
+    <script type="module" src="components/notificationHandler.js"></script>
 
     <script>
       function formatDate(isoString) {
