--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -10,6 +10,8 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+
+    <link rel="stylesheet" href="components/notification.css" />
   </head>
   <body>
     <header class="header">
@@ -104,7 +106,7 @@
           });
 
           const result = await response.json();
-          alert(result.message);
+          window.location.href = "/contact?message_submitted=true";
           if (response.ok) {
             this.reset(); // Clear the form after submission
           }
@@ -131,6 +133,7 @@
       </div>
     </footer>
     <script src="js/index.js"></script>
+    <script type="module" src="components/notificationHandler.js"></script>
     <script>
       function formatDate(isoString) {
         const date = new Date(isoString);
