--- a/views/homepages/index-vote-checking-period.ejs
+++ b/views/homepages/index-vote-checking-period.ejs
@@ -10,6 +10,10 @@
     <link rel="stylesheet" type="text/css" href="css/index_election.css" />
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+
+    <link rel="stylesheet" href="components/notification.css" />
   </head>
   <body>
     <header class="header">
@@ -82,6 +86,7 @@
       </div>
     </footer>
     <script src="js/index.js"></script>
+    <script type="module" src="components/notificationHandler.js"></script>
 
     <script>
       function formatDate(isoString) {
