--- a/views/homepages/index-voting-period.ejs
+++ b/views/homepages/index-voting-period.ejs
@@ -9,6 +9,9 @@
     <link rel="stylesheet" type="text/css" href="css/home.css" />
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+
+    <link rel="stylesheet" href="components/notification.css" />
   </head>
   <body>
     <header class="header">
@@ -108,6 +111,8 @@
       </div>
     </footer>
     <script src="js/index.js"></script>
+    <script type="module" src="components/notificationHandler.js"></script>
+
     <script>
       function formatDate(isoString) {
         const date = new Date(isoString);
