--- a/views/voter/verify-otp.ejs
+++ b/views/voter/verify-otp.ejs
@@ -11,6 +11,10 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+
+    <link rel="stylesheet" href="components/notification.css" />
   </head>
   <body>
     <header class="header">
@@ -70,6 +74,8 @@
               }
             }
           </script>
+
+          <script type="module" src="components/notificationHandler.js"></script>
         </div>
       </div>
     </div>
