--- a/views/admin/shared-voter-turnout.ejs
+++ b/views/admin/shared-voter-turnout.ejs
@@ -1,15 +1,12 @@
 <div class="first-main">
-  <div class="main-header">
-    <!-- <p id="text-blockchain-link">
-      <b>Blockchain Link:</b>
-      <span><a href="https://www.blockchain.com/ucsebulsu">https://www.blockchain.com/ucsebulsu</a></span>
-    </p> -->
-  </div>
+ 
  
   <div class="main-content">
-  
+  <br />
+  <br />
     <div class="left-container">
-      <h1 class="ssc">Bulacan State University Total Voter Turnout</h1>
+      <h1 class="ssc">Supreme Student Council</h1>
+      <br />
       <div class="main-left">
         <h1>Total Voter Turnout</h1>
         <div class="content-box-2">
@@ -25,15 +22,17 @@
       </div>
     </div>
     <div class="right-container">
-      <h1 class="lsc">Voter Turnout by College</h1>
+      <h1 class="lsc">Local Student Council </h1>
+      <br />
       <div class="campus">
         <select class="select">
           <option>Main Campus</option>
           <option>External Campuses</option>
         </select>
         </div>
+        <br />
         <div class="main-right">
-          <h1>LSC Voter Turnout</h1>
+          <h1>Voter Turnout per College</h1>
           <div id="container-charts"></div>
         </div>
       </div>
