--- a/public/admin/css/voter-turnout.css
+++ b/public/admin/css/voter-turnout.css
@@ -36,6 +36,7 @@
   display: flex;
   flex-direction: row;
   flex-grow: 1;
+  gap: 2%;
 }
 
 .main-left,
@@ -44,6 +45,7 @@
   margin: 3%;
   border-radius: 2em;
   padding: 2%;
+  justify-content: center;
 }
 
 .main-right {
@@ -60,4 +62,9 @@
 .left-container,
 .right-container {
   width: 50%;
+}
+
+.ssc,
+.lsc {
+  text-align: center;
 }
