--- a/views/homepages/rvs-about.ejs
+++ b/views/homepages/rvs-about.ejs
@@ -107,7 +107,7 @@
           minute: "2-digit",
           hour12: true,
         };
-        return date.toLocaleString("en-US", options).replace(",", " -").toUpperCase();
+        return date.toLocaleString("en-US", options).toUpperCase();
       }
 
       function updateDateTime() {
