--- a/views/homepages/rvs-voter-turnout.ejs
+++ b/views/homepages/rvs-voter-turnout.ejs
@@ -104,7 +104,7 @@
           minute: "2-digit",
           hour12: true,
         };
-        return date.toLocaleString("en-US", options).replace(",", " -").toUpperCase();
+        return date.toLocaleString("en-US", options).toUpperCase();
       }
 
       function updateDateTime() {
